Fix action buttons disappearing after round 1 and implement operational improvements
- Fix: Clear currentRound when new round starts to ensure action buttons appear after each round
- Add toast notifications for user feedback (summary/question generation, copy to clipboard, file uploads)
- Implement file backup system with periodic backups and retention policy
- Add log sanitization to remove sensitive data from logs
- Add startup cleanup for orphaned temporary files
- Implement Socket.IO acknowledgments for critical events
- Reduce LLM token limits and ensure complete statements with continuation logic
- Update system prompts for more concise responses
- Add comprehensive unit tests for new features
- Update documentation (ARCHITECTURE.md, SOCKET_EVENTS.md, DEPLOYMENT.md)
- Fix NextAuth configuration and SSR compatibility issues

--- a/env.example
+++ b/env.example
@@ -76,3 +76,29 @@ REDIS_PASSWORD=
 # File Storage Configuration (Optional - defaults shown)
 # Directory for storing discussion files
 DISCUSSIONS_DIR=data/discussions
+
+# Session Configuration (Optional - defaults shown)
+# Session timeout in minutes (default: 1440 = 24 hours)
+SESSION_TIMEOUT_MINUTES=1440
+
+# LLM Provider Timeouts (Optional - defaults shown)
+# Timeout in milliseconds for each LLM provider
+LLM_TIMEOUT_GROQ=60000
+LLM_TIMEOUT_MISTRAL=90000
+LLM_TIMEOUT_OPENROUTER=120000
+
+# Backup Configuration (Optional - defaults shown)
+# Enable automatic backups of discussion files
+BACKUP_ENABLED=true
+# Number of days to retain backups (default: 30)
+BACKUP_RETENTION_DAYS=30
+# Interval between backups in hours (default: 1)
+BACKUP_INTERVAL_HOURS=1
+# Directory for storing backups (default: data/backups)
+BACKUPS_DIR=data/backups
+
+# Security Configuration (Optional - future enhancement)
+# Enable virus scanning for uploaded files (requires ClamAV or cloud service)
+ENABLE_VIRUS_SCAN=false
+CLAMAV_HOST=localhost
+CLAMAV_PORT=3310
