--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pdf-parse": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.2.0",
