--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pre-build-check": "node scripts/pre-build-check.js",
     "build": "npm run pre-build-check && next build",
     "start": "NODE_ENV=production tsx server.ts",
-    "lint": "next lint",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^16.0.3",
     "husky": "^8.0.3",
     "jsdom": "^27.2.0",
