--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,10 @@ jobs:
         run: npm ci
 
       - name: Run unit and integration tests
-        run: npm test
+        run: npm test -- --run
         env:
           NODE_ENV: test
+          CI: true
 
       - name: Upload test coverage
         if: always()
