--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "test": "vitest",
+    "test:ci": "vitest --run",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
