--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
       }
     },
     {
-      "files": ["src/lib/rate-limit.ts"],
+      "files": ["**/rate-limit.ts"],
       "rules": {
         "@typescript-eslint/no-unused-vars": "off",
         "no-unused-vars": "off"
